<resources>
    <string name="app_name">Eventure</string>
    <string name="events_nearby">Events</string>
    <string name="events_joined">Joined</string>
    <string name="events_created">Created</string>
    <string name="chat">Chat</string>
    <string name="add">Add</string>

    <!-- Login / Register -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="have_account">Already have an account? Sign in</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_no_match">Password and confirmation does not
        match!</string>
    <string name="enter_email_warning">Please enter a correct email address
    </string>
    <string name="username_warning">Your username has to contain at
        least 3 characters.</string>
    <string name="password_warning">Your password has to contain at least
    6 characters.</string>

    <!-- top bar -->
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="event">Event</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="flip_view">Flip View</string>

    <!-- settings strings -->
    <string name="radius">Search Radius</string>
    <string name="category">Category</string>

    <!-- API URLS -->
    <string name="API_base">https://urban-action.max-karthan.de/TinderAPI</string>
    <string name="API_getToken">/token</string>
    <string name="API_register">/api/account/register</string>
    <string name="API_event">/api/Event</string>
    <string name="API_event_image">/api/Event/image</string>

    <!-- Network -->
    <string name="no_connection">It seems like you´re not connected to
        the internet.</string>

    <!--Identifier for the SharedPreferences Files -->
    <string name="store_account">ACCOUNT_SHARED_PREFERENCES</string>
  
    <!-- SharedPreferences Keys -->
    <string name="store_username">USERNAME</string>
    <string name="store_token">TOKEN</string>
    <string name="store_token_expire">TOKEN_EXPIRE</string>
    <string name="check">Check</string>

    <!-- Categories -->
    <string-array name="categories">
        <item>Sport</item>
        <item>Ausgehen</item>
        <item>Erholung</item>
        <item>Kultur</item>
        <item>Sonstiges</item>
        <item>Alle</item>
    </string-array>

    <!-- TinderView-->
    <string name="tinder_view_in">Rock n´ Roll</string>
    <string name="tinder_view_out">Lame</string>
    <string name="at_time">um</string>
</resources>
