<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.in.uulm.map.tinder.login.LoginActivity"
        android:background="@color/color_accent">

    <EditText
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            tools:layout_editor_absoluteY="292dp"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/editText"
            android:hint="@string/email"
            android:textColor="@color/login_text_color"
            android:textColorLink="@color/login_text_color"
            android:textColorHint="?attr/colorBackgroundFloating"
            android:backgroundTint="@color/login_text_color" />

    <EditText
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            tools:layout_editor_absoluteY="344dp"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/editText2"
            android:hint="@string/password"
            android:textColor="@color/login_text_color"
            android:textColorHint="?attr/colorBackgroundFloating"
            android:backgroundTint="@color/login_text_color" />

    <Button
            android:text="@string/sign_in"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="401dp"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/button3"
            android:backgroundTint="@color/common_google_signin_btn_text_light_disabled"
            android:textColor="@color/login_text_color"/>

    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:id="@+id/textView"
            tools:layout_editor_absoluteY="275dp"
            tools:layout_editor_absoluteX="8dp"
            android:textColor="@color/login_text_color"/>

    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="477dp"
            tools:layout_editor_absoluteX="106dp"
            android:id="@+id/textView2"
            android:textColor="@color/login_text_color"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="127dp"
            tools:layout_editor_absoluteX="141dp"
            android:id="@+id/txt_view_logo"
            android:textAppearance="@android:style/TextAppearance"
            android:fontFamily="sans-serif"
            android:typeface="sans"
            android:textSize="36sp"
            android:textColor="@color/login_text_color" />

</android.support.constraint.ConstraintLayout>
