<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        tools:context="de.in.uulm.map.tinder.register.RegisterActivity"
        android:background="@color/color_accent">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_view_logo_register"
            android:textAppearance="@android:style/TextAppearance"
            android:fontFamily="sans-serif"
            android:typeface="sans"
            android:textSize="62sp"
            android:textColor="@color/login_text_color"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="101dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_txt_email_register"
            android:hint="@string/email"
            android:textColor="@color/login_text_color"
            android:textColorLink="@color/login_text_color"
            android:textColorHint="?attr/colorBackgroundFloating"
            android:backgroundTint="@color/login_text_color"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_view_logo_register" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:ems="10"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/edit_txt_username_register"
            android:hint="@string/username"
            android:textColor="@color/login_text_color"
            android:textColorLink="@color/login_text_color"
            android:textColorHint="?attr/colorBackgroundFloating"
            android:backgroundTint="@color/login_text_color"
            android:layout_marginTop="@dimen/form_vertical_margin_small"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_email_register" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textPassword"
            android:ems="10"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/edit_txt_password_register"
            android:hint="@string/password"
            android:textColor="@color/login_text_color"
            android:textColorHint="?attr/colorBackgroundFloating"
            android:backgroundTint="@color/login_text_color"
            android:layout_marginTop="@dimen/form_vertical_margin_large"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_username_register" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textPassword"
            android:ems="10"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/edit_txt_confirm_password_register"
            android:hint="@string/confirm_password"
            android:textColor="@color/login_text_color"
            android:textColorHint="?attr/colorBackgroundFloating"
            android:backgroundTint="@color/login_text_color"
            android:layout_marginTop="@dimen/form_vertical_margin_small"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_password_register" />

    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:backgroundTint="@color/common_google_signin_btn_text_light_default"
            android:textColor="@color/login_text_color"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_confirm_password_register" />

    <TextView
            android:text="@string/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_view_login_link"
            android:textColor="@color/login_text_color"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"

            />

    <TextView
            android:text=""
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/txt_view_warning_confirm_register"
            android:layout_marginTop="@dimen/warning_text_view_margin_top"
            android:paddingStart="@dimen/warning_text_view_start_padding"
            android:textColor="@color/color_warnings"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_confirm_password_register"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            android:textSize="@dimen/warning_text_view_text_size" />

    <TextView
            android:text=""
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/txt_view_warnings_email_register"
            android:layout_marginTop="@dimen/warning_text_view_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_email_register"
            android:textSize="@dimen/warning_text_view_text_size"
            android:textColor="@color/color_warnings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingStart="@dimen/warning_text_view_start_padding"

            />
    <TextView
            android:text=""
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/txt_view_warnings_password_register"
            android:layout_marginTop="@dimen/warning_text_view_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_password_register"
            android:textSize="@dimen/warning_text_view_text_size"
            android:textColor="@color/color_warnings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingStart="@dimen/warning_text_view_start_padding"

            />
    <TextView
            android:text=""
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/txt_view_warnings_username_register"
            android:layout_marginTop="@dimen/warning_text_view_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_username_register"
            android:textSize="@dimen/warning_text_view_text_size"
            android:textColor="@color/color_warnings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingStart="@dimen/warning_text_view_start_padding"

            />

</android.support.constraint.ConstraintLayout>